--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "repository": "git@github.com:kaznak/normalize-japanese-addresses-cli.git",
   "author": "kaznak <kaznak.at.work@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^2.5.1",
+    "prettier-plugin-packagejson": "^2.2.15"
+  }
 }
