--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --ignore-unknown --write ."
   },
   "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "prettier-plugin-packagejson": "^2.2.15"
   }
