--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/create-config": "^0.1.2",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
