--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.4",
+    "jest": "^27.4.7",
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "prettier-plugin-packagejson": "^2.2.15"
