--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/node": "^17.0.10",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
@@ -30,6 +32,7 @@
     "jest": "^27.4.7",
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
-    "prettier-plugin-packagejson": "^2.2.15"
+    "prettier-plugin-packagejson": "^2.2.15",
+    "typescript": "^4.5.5"
   }
 }
