--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@eslint/create-config": "^0.1.2",
     "@tsconfig/node16": "^1.0.2",
     "@types/node": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
