--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
     "@tsconfig/node16": "^1.0.2",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -35,6 +36,8 @@
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "prettier-plugin-packagejson": "^2.2.15",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
 }
