--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^12.2.2",
     "prettier": "^2.5.1",
     "prettier-plugin-packagejson": "^2.2.15",
+    "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
