--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
       "prettier --ignore-unknown --write"
     ]
   },
+  "dependencies": {
+    "@geolonia/normalize-japanese-addresses": "^2.4.0"
+  },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
     "@tsconfig/node16": "^1.0.2",
