--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ]
   },
   "dependencies": {
-    "@geolonia/normalize-japanese-addresses": "^2.4.0"
+    "@geolonia/normalize-japanese-addresses": "^2.4.0",
+    "csv": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
