--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@tsconfig/node16": "^1.0.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
@@ -40,9 +43,11 @@
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "lint-staged": "^12.2.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "prettier-plugin-packagejson": "^2.2.15",
     "rimraf": "^3.0.2",
+    "rollup": "^2.66.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
