--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@geolonia/normalize-japanese-addresses": "^2.4.0",
+    "commander": "^8.3.0",
     "csv": "^6.0.5"
   },
   "devDependencies": {
