--- a/package.json
+++ b/package.json
@@ -60,5 +60,8 @@
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.5"
+  },
+  "engines": {
+    "node": "16"
   }
 }
